Hide language select first and then task rows and fix bug where notification count was visible when it should have been hidden

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
@@ -173,7 +173,6 @@ body.modal-open[style] {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 45px;
 }
 .menu {
     display: inline-block;
@@ -188,12 +187,28 @@ body.modal-open[style] {
     min-width: 200px;
     height: 100%;
     @include medium-screen {
-        .fa {
+        min-width: 0px;
+        .organization-select {
+            display: none;
+        }
+        .language-select {
             display: none;
         }
     }
     @include small-screen {
-        display: none;
+        min-width: 0px;
+        .organization-select {
+            display: none;
+        }
+        .language-select {
+            display: none;
+        }
+        .fa {
+            display: none;
+        }
+        .unseen-text {
+            display: none;
+        }
     }
 }
 .tasks-icons > .fa {
@@ -870,6 +885,9 @@ padding: 0 12px;
     }
     .main-page-selects {
         display: none;
+        @include medium-screen {
+            display: flex;
+        }
         @include small-screen {
             display: flex;
         }
@@ -879,9 +897,6 @@ padding: 0 12px;
         margin-bottom: 10px;
         .fa {
             cursor: pointer;
-        }
-        @include medium-screen {
-            display: flex;
         }
         @include small-screen {
             display: flex;
